fixed result display bug add css styles fixed display issue on mobile view

--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@ body {
 
 .btn-predict {
     background-color: rgb(166, 25, 46);
-    border: none;
+    border-radius: 20px;
     color: #FFFFFF;
     padding: 15px 32px;
     text-decoration: none;
@@ -17,10 +17,7 @@ body {
 .btn-predict:hover {
     color: rgb(166, 25, 46);
     background-color: #FFFFFF;
-    padding: 15px 32px;
     border: 2px solid rgb(166, 25, 46);
-    font-size: 16px;
-    margin-bottom: 20px;
 }
 
 .btn-submit {
@@ -48,15 +45,25 @@ body {
 .footer-container {
     background-color: rgb(166, 25, 46);
     padding: 10px;
-    position: absolute;
+    position: fixed;
     height: auto;
     width: 100%;
+    bottom: 0;
 }
 
 .name-tag {
   font-family: 'IBM Plex Sans', sans-serif;
-  font-size: 10px;
+  font-size: 12px;
   color: #FFFFFF;
+    text-decoration: none;
+    opacity: 0.7;
+  filter: alpha(opacity=70);
+}
+
+.name-tag:hover {
+    color: #FFFFFF;
+    opacity: 1.0;
+  filter: alpha(opacity=100);
 }
 
 .fad-pad {
@@ -76,10 +83,11 @@ body {
     .footer-container {
         background-color: rgb(166, 25, 46);
         padding: 10px;
-        position: absolute;
+        position: fixed;
         height: auto;
         text-align: center;
         width: 100%;
+        bottom: 0;
     }
 
     .btn-predict {
